users get/post endpoints + swagger get for users + env file for users with viper
